Changes in 1.2.10
- Restore properties like the update- and commit-pipe on "sync-repos"

Changes in 1.2.9
- Various small fixes that got visible with new compiler versions and/or LLVM.

Changes in 1.2.8
- Fixed URI canonicalization (UTF8)

Changes in 1.2.7
- Updates for Clang
- Fixed some compiler warnings
- Fixed an "INTERNAL BUG" (issue 21) that didn't exist previously (?)

Changes in 1.2.6
- Updates for GCC 5

Changes in 1.2.5
- Fix for segfault on deleted properties, eg. "svn:owner".
- configure.in fix for OS X Lion with clang; thanks, Ryan!
  http://fsvs.tigris.org/issues/show_bug.cgi?id=16
- Removed nested functions, to make the stack non-executable
  (gcc needs trampoline code).
  See http://fsvs.tigris.org/issues/show_bug.cgi?id=17.

Changes in 1.2.4
- Bugfix: auto-props not applied for explicitly specified entries.
  Thanks to Peter for the detailed bug report!
  Please note that the auto-props _only_ get applied if there are
  _no_ properties on an entry set (yet); so, after
    fsvs prop-set file property...
  the auto-props will _not_ be applied (as they might overwrite
  the manually set properties).

Changes in 1.2.3
- Compilation fixes for MacOS 10.6; thanks, Thomas!
- Added "password" option, as sent by Mark. Thank you!
- Workarounds for gcc-4.5 and gcc-4.6 regressions. Thank you, Brian!
- Compatibility with autoconf 2.68.

Changes in 1.2.2
- Tried to get configuration/compilation to work with OSX 10.6.
  Thanks, Florian.
- Fix for a stray "fstat64", which compilation for MacOSX10.4.
  Thank you, Mike.
- Fix length calculation bug, found by Mark via a (bad?) compilation warning.
  Thank you!

Changes in 1.2.1
- Documentation fixes. Thank you, Gunnar.
- Fixed config_dir, so that using other authentication paths work.
  Previously $CONF/auth was fixed; better default.
- Fix "unversion" on the wc root.
- Fix "." as only parameter when started from the root.
- Two compile fixes; thank you, Stan!
- Solaris 10 compatibility fixes. Thank you, Stan!