@@ -1,5 +1,7 @@
 Changes in 1.2.10
 - Restore properties like the update- and commit-pipe on "sync-repos"
+- When using a commit-pipe store the original (non-transformed) MD5
+  in the local properties as well, so that they match the remote data.
 
 Changes in 1.2.9
 - Various small fixes that got visible with new compiler versions and/or LLVM.
